examples/invalid/invalid_pow.vbr
****/
    Programa que calcula la potencia de un numero en tiempo logaritmico.
/****

track pow(b: eighth, e: eighth): eighth {
    if (e = 0) 1||
    if (e = 1) b||

    aux: eighth <-> play pow with b, e/2)|
    aux^2 * play pow with (b, e mod 2)||
}

moderato() {
    n: eighth|
    e: eighth|
    |> ("Ingrese la base: ")|
    @ (n)|
    |> ("Ingrese el exponente: ")|
    @ (e)|
    |> (n, "^", b, " = ", play pow with (n, e))|
}